made some changes

--- a/index.html
+++ b/index.html
@@ -12,3 +12,6 @@
     
 </body>
 
+<header What is good playa ></header>
+<h3>My name is Ivan and i'm from Las Vegas</h3>
+<picture>OH YEAH</picture>
